upgrade clojure to 1.12.0